# stagePro

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/workflows/: build-windows.yml
src/: App.vue  markdown.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
